<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <!-- Bouton des paramètres ajouté ici -->
    <ImageView
        android:id="@+id/settingsButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end|top"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/settings_description"
        android:clickable="true"
        android:focusable="true"
        android:padding="4dp" />

    <!-- Section supérieure -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|top">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_description" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_message"
            android:textColor="#FFFF00"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/nextLiveMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/rounded_border"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/playPauseButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_play"
            android:contentDescription="@string/play_pause_description"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:padding="8dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>
    </LinearLayout>

    <!-- Section inférieure positionnée en bas et centrée -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp">

        <ImageView
            android:id="@+id/facebookButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_facebook"
            android:contentDescription="@string/facebook_description"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp" />

        <ImageView
            android:id="@+id/websiteButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_public"
            android:contentDescription="@string/website_description"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp" />
    </LinearLayout>

</FrameLayout>
